apply formatting 1